--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my landing page</title>
-    <!-- <link rel="stylesheet" href="stylesheet.css"> -->
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <div class="left-side">
             <div class="main-title">This website is awesome</div>
             <div class="subtext">This website has some subtext that goes here under the main title. It´s a smaller font and the color is lower contrast</div>
-            <button>Sign up</button>
+            <button class="sign-up">Sign up</button>
         </div>
         <div>
             <img src="img/img1.png" width="400px"> <!-- change img later -->
@@ -42,15 +42,23 @@
             <li><img src="img/white.png" width="208px"></li>
             <li><img src="img/white.png" width="208px"></li>
         </ul>
+        <ul class="subtextimage">
+            <li>This is some subtext under an illustration or image</li>
+            <li>This is some subtext under an illustration or image</li>
+            <li>This is some subtext under an illustration or image</li>
+            <li>This is some subtext under an illustration or image</li>
+
+        </ul>
     </div>
 
     <!-- section 3 grey quote-->
-    <div class="section3"></div>
-    <div class="quote">This is an inspiring quote, or a testimonial from a costumer. Maybe it´s just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-    <div>-Thor, God of Thunder</div>
+    <div class="section3">
+        <div class="quote">This is an inspiring quote, or a testimonial from a costumer. Maybe it´s just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="right-side">-Thor, God of Thunder</div>
+    </div>
 
 
-    <!-- section 4 sign up dic white & blue -->
+    <!-- section 4 sign up div white & blue -->
     <div class="section4"></div>
 
     <!-- section 5 footer darf-->
