--- a/index.html
+++ b/index.html
@@ -10,25 +10,23 @@
 <body>
     <!-- section 0 header with 3 links-->
     <div class="header">
-        <div class="left-side"> Header Logo</div>
-        <div class="right-side">
-            <ul class="links">
-                <li><a href="#">link-one</a></li>
-                <li><a href="#">link-two</a></li>
-                <li><a href="#">link-three</a></li>
-            </ul>
-        </div>
+        <div class="header-logo">Header Logo</div>
+        <ul class="links">
+            <li><a href="#">header link-one</a></li>
+            <li><a href="#">header link-two</a></li>
+            <li><a href="#">header link-three</a></li>
+        </ul>
     </div>
 
     <!-- section 1 subheader: button and image-->
     <div class="section1">
-        <div class="left-side">
+        <div class="left-side-one">
             <div class="main-title">This website is awesome</div>
             <div class="subtext">This website has some subtext that goes here under the main title. It´s a smaller font and the color is lower contrast</div>
             <button class="sign-up">Sign up</button>
         </div>
-        <div>
-            <img src="img/img1.png" width="400px"> <!-- change img later -->
+        <div class="placeholder-img">
+            <img src="img/img1.png" width="550px"> <!-- change img later -->
         </div>
 
     </div>
