finish footer, s4 and s3

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my landing page</title>
+    <title>landing page</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
@@ -34,18 +34,17 @@
     <!-- section 2 random info with 4 images-->
     <div class="section2">
         <div class="information-header">Some random information.</div>
-        <ul class="folder-img">
-            <li><img src="img/white.png" width="208px"></li>
-            <li><img src="img/white.png" width="208px"></li>
-            <li><img src="img/white.png" width="208px"></li>
-            <li><img src="img/white.png" width="208px"></li>
-        </ul>
+        <div class="box-container">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
         <ul class="subtextimage">
-            <li>This is some subtext under an illustration or image</li>
-            <li>This is some subtext under an illustration or image</li>
-            <li>This is some subtext under an illustration or image</li>
-            <li>This is some subtext under an illustration or image</li>
-
+            <li class="sub">This is some subtext under an illustration or image</li>
+            <li class="sub">This is some subtext under an illustration or image</li>
+            <li class="sub">This is some subtext under an illustration or image</li>
+            <li class="sub">This is some subtext under an illustration or image</li>
         </ul>
     </div>
 
@@ -57,7 +56,15 @@
 
 
     <!-- section 4 sign up div white & blue -->
-    <div class="section4"></div>
+    <div class="section4">
+        <div class="container">
+            <div class="right-text">
+                <div class="header-logo">Call to action! It´s time!</div>
+                <div class="subtext">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="sign-up border">Sign up!</button>
+        </div>
+    </div>
 
     <!-- section 5 footer darf-->
     <div class="footer">
