--- a/index.html
+++ b/index.html
@@ -34,18 +34,21 @@
     <!-- section 2 random info with 4 images-->
     <div class="section2">
         <div class="information-header">Some random information.</div>
-        <div class="box-container">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+        <div class="boxandSubtext">
+            <div class="box-container">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+            <div class="subtextimage">
+                <div class="sub">this is some subtext under an illustration or image</div>
+                <div class="sub">this is some subtext under an illustration or image</div>
+                <div class="sub">this is some subtext under an illustration or image</div>
+                <div class="sub">this is some subtext under an illustration or image</div>
+            </div>
         </div>
-        <ul class="subtextimage">
-            <li class="sub">This is some subtext under an illustration or image</li>
-            <li class="sub">This is some subtext under an illustration or image</li>
-            <li class="sub">This is some subtext under an illustration or image</li>
-            <li class="sub">This is some subtext under an illustration or image</li>
-        </ul>
+
     </div>
 
     <!-- section 3 grey quote-->
